2011-08-25  Sam Steingold  <sds@gnu.org>

	Report failures in init_language
	* spvw_language.d (init_language): accept lisp_error_p and report
	all failures using either fprintf() or error();
	use classify_namestring on all platforms to check argv_localedir
	(language_deutsch): rename to language_german for consistency
	(language_francais): rename to language_french for consistency
	* i18n.d (SET-CURRENT-LANGUAGE): pass lisp_error_p=true to init_language
	* lispbibl.d (init_language): update the prototype
	(file_kind_t): move here from pathname.d and rename from
	namestring_kind_t
	(classify_namestring): add the prototype
	* pathname.d (classify_namestring): make global
	* spvw.d (main): pass lisp_error_p=false to init_language

2011-08-24  Sam Steingold  <sds@gnu.org>

	* configure (makemake_args) [win32gcc]: add --with-dynamic-modules=no
	<http://article.gmane.org/gmane.comp.lib.gnulib.bugs:27739>
	(host_arg): add both --host and --build argument
	Suggested by Eric Blake <eblake@redhat.com>
	https://lists.gnu.org/archive/html/bug-libsigsegv/2011-08/msg00006.html

2011-08-24  Sam Steingold  <sds@gnu.org>

	* error.d (format_message, FORMAT-MESSAGE): move here from ...
	* errwin32.d: here for the sake of cygwin

2011-08-24  Sam Steingold  <sds@gnu.org>

	* makemake.in: save & restore CC around setting it for XCC_CREATESHARED
	Suggested by Eric Blake <eblake@redhat.com>
	http://article.gmane.org/gmane.comp.shells.bash.bugs:17158

2011-08-24  Sam Steingold  <sds@gnu.org>

	* misc.d (LISP-IMPLEMENTATION-VERSION): add missing GETTEXT calls
	(MACHINE-TYPE, MACHINE-VERSION): make return value immutable
	* spvw.d (main): localize the name of the main thread

2011-08-24  Sam Steingold  <sds@gnu.org>

	* spvw_language.d (init_language): danish locale is "da_DK"
	Reported by Bruno Haible

2011-08-23  Sam Steingold  <sds@gnu.org>

	* win32.d (WSAEAGAIN, WSAENOENT): remove unused defines
	(ioctl): do not define to ioctlsocket because gnulib defines it to